Fixed issue with code blocks where content was overflowing the container and triggering a horizontal scrollbar

--- a/css/document.css
+++ b/css/document.css
@@ -311,6 +311,7 @@ pre {
   -webkit-border-radius: 1em;
   -moz-border-radius: 1em;
   border-radius: 1em;
+  overflow: hidden;
 }
 /*
 pre {
